--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,8 @@ dependencies {
   implementation 'javax.mail:javax.mail-api:1.6.2'
   // https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc8
   implementation 'com.oracle.database.jdbc:ojdbc8:18.15.0.0'
+  // https://mvnrepository.com/artifact/javax.servlet/jstl
+    implementation 'javax.servlet:jstl:1.2'
 }
 
 tasks.named('bootBuildImage') {
